# EasyMLOps

./: .gitignore  BACKEND_ENDPOINTS_ANALYSIS.md  Dockerfile  README.md  TEST_COVERAGE_EXPANSION_REPORT.md  demo.py  docker-compose.yml  env.docker.template  env.example  pyproject.toml  pytest.ini  run_tests.py
app/: __init__.py  config.py  database.py  main.py
app/core/: __init__.py  app_factory.py  routes.py
app/routes/: __init__.py  deployments.py  dynamic.py  models.py  monitoring.py  schemas.py
app/schemas/: __init__.py  model.py  monitoring.py
app/services/: __init__.py  bentoml_service.py  deployment_service.py  monitoring_service.py  schema_service.py
app/utils/: __init__.py  logging.py  model_utils.py
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
scripts/: dev-start.sh  healthcheck.sh  start.sh
static/: index.html
static/css/: styles.css
static/js/: app.js
tests/: README.md  __init__.py  conftest.py  test_config.py  test_database.py  test_integration_comprehensive.py  test_main_application.py  test_models.py  test_routes_deployments.py  test_routes_dynamic.py  test_routes_monitoring.py  test_routes_schemas.py  test_services.py  test_services_comprehensive.py  test_utils_logging.py  test_utils_model_utils.py
tests/fixtures/: __init__.py  database.py  services.py
tests/test_core/: test_app_factory.py  test_app_factory_comprehensive.py  test_routes.py  test_routes_comprehensive.py  test_routes_core.py
tests/test_integration/: __init__.py
tests/test_main/: __init__.py  test_main_application.py  test_runtime.py  (+1 more)
(+211 files in other folders)
