[tool.poetry]
name = "easymlops"
version = "0.1.0"
description = "No-code ML deployment for data scientists."
authors = ["Tung Cheung <tungycheung@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.12,<0.116.0"
bentoml = ">=1.4.15,<2.0.0"
uvicorn = ">=0.34.3,<0.35.0"
sqlalchemy = ">=2.0.41,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
alembic = ">=1.16.1,<2.0.0"
pydantic = ">=2.11.5,<3.0.0"
pydantic-settings = ">=2.8.0,<3.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
torch = ">=2.7.0,<3.0.0"
torchvision = ">=0.22.0,<0.23.0"
xgboost = ">=3.0.2,<4.0.0"
lightgbm = ">=4.6.0,<5.0.0"
h2o = ">=3.46.0.7,<4.0.0.0"
pandas = ">=2.2.3,<3.0.0"
numpy = ">=1.26.0,<2.2.0"
matplotlib = ">=3.10.3,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
plotly = ">=6.1.2,<7.0.0"
joblib = ">=1.5.1,<2.0.0"
requests = ">=2.32.3,<3.0.0"
python-multipart = ">=0.0.20,<0.0.21"
jinja2 = ">=3.1.6,<4.0.0"
aiofiles = ">=24.1.0,<25.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
tensorflow = ">=2.19.0"
sqlmodel = ">=0.0.24,<0.0.25"
asyncpg = "^0.30.0"
psutil = ">=6.1.1,<7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
